--- a/regiohelden/templates/users/user_list.html
+++ b/regiohelden/templates/users/user_list.html
@@ -6,12 +6,31 @@
 <div class="container">
   <h2>Users</h2>
 
-  <div class="list-group">
+  <table class="table">
+  <tr>
+      <th>User</th>
+      <th>IBAN</th>
+      <th></th>
+  </tr>
     {% for user in user_list %}
-      <a href="{% url 'users:detail' user.username %}" class="list-group-item">
-        <h4 class="list-group-item-heading">{{ user.username }}</h4>
-      </a>
+        <tr>
+            <td>
+                {% if user.created_by == request.user and user.is_superuser %}
+                    <a href="{% url 'users:detail' user.username %}" class="list-group-item">
+                        {{ user.get_full_name }}
+                    </a>
+                {% else %}
+                    {{ user.get_full_name }}
+                {% endif %}
+            </td>
+            <td>{{ user.iban }}</td>
+            <td>
+                {% if user.created_by == request.user and user.is_superuser %}
+                    <a href="{% url 'users:delete' user.username %}">Remove</a>
+                {% endif %}
+            </td>
+        </tr>
     {% endfor %}
-  </div>
+  </table>
 </div>
 {% endblock content %}
