--- a/regiohelden/templates/users/user_list.html
+++ b/regiohelden/templates/users/user_list.html
@@ -4,7 +4,17 @@
 
 {% block content %}
 <div class="container">
-  <h2>Users</h2>
+    <br />
+  <div class="row">
+      <div class="col-md-11">
+        <h2>Users</h2>
+      </div>
+
+      <div class="col-md-1">
+        <a href="{% url "users:create" %}" class="btn btn-primary">Create</a>
+      </div>
+  </div>
+
 
   <table class="table">
   <tr>
@@ -15,8 +25,8 @@
     {% for user in user_list %}
         <tr>
             <td>
-                {% if user.created_by == request.user and user.is_superuser %}
-                    <a href="{% url 'users:detail' user.username %}" class="list-group-item">
+                {% if user.created_by == request.user and request.user.is_superuser %}
+                    <a href="{% url 'users:detail' user.pk %}">
                         {{ user.get_full_name }}
                     </a>
                 {% else %}
@@ -25,8 +35,8 @@
             </td>
             <td>{{ user.iban }}</td>
             <td>
-                {% if user.created_by == request.user and user.is_superuser %}
-                    <a href="{% url 'users:delete' user.username %}">Remove</a>
+                {% if user.created_by == request.user and request.user.is_superuser %}
+                    <a href="{% url 'users:delete' user.pk %}">Remove</a>
                 {% endif %}
             </td>
         </tr>
